[gd_scene load_steps=13 format=3 uid="uid://co5d461mq1i44"]

[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_klk46"]
[ext_resource type="Texture2D" uid="uid://gwkhvfbpqrl5" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_v1s1u"]
[ext_resource type="Texture2D" uid="uid://cc4rkqfpme86q" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_6g0ev"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xk1d2"]
texture = ExtResource("1_v1s1u")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="SystemFont" id="SystemFont_0bbmx"]
font_names = PackedStringArray("Lucida Console")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_d5dg0"]
font = SubResource("SystemFont_0bbmx")
font_size = 56
font_color = Color(0.368627, 0, 0.00784314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ksdpc"]
texture = ExtResource("2_6g0ev")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_fgsxq"]
font_names = PackedStringArray("Roboto")
font_weight = 600
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_kcsak"]
font = SubResource("SystemFont_fgsxq")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_qbf3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.666667)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(346.5, 74)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(348, 375)]
}

[sub_resource type="Animation" id="Animation_glgpe"]
resource_name = "deafult"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.823529)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(347, -120), Vector2(346.5, 74)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 2),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(348, 699), Vector2(348, 417)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sbymj"]
_data = {
"RESET": SubResource("Animation_qbf3x"),
"deafult": SubResource("Animation_glgpe")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_klk46")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -229.5
offset_top = 74.0
offset_right = 229.506
offset_bottom = 201.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xk1d2")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.5
offset_top = -54.5
offset_right = 141.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_d5dg0")
vertical_alignment = 1

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -273.0
offset_right = 228.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_ksdpc")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -50.0
offset_right = 110.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 2

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived:"
label_settings = SubResource("LabelSettings_kcsak")

[node name="TimeCount" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "60 : 60"
label_settings = SubResource("LabelSettings_kcsak")

[node name="MonsterLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated:"
label_settings = SubResource("LabelSettings_kcsak")

[node name="MonsterCount" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "99999"
label_settings = SubResource("LabelSettings_kcsak")

[node name="MoneyLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Money Collected:"
label_settings = SubResource("LabelSettings_kcsak")

[node name="MoneyCount" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "99999"
label_settings = SubResource("LabelSettings_kcsak")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sbymj")
}
autoplay = "deafult"
